<resources>
    <string name="app_name">HelloWorldSematec</string>
    <string name="title_activity_data_input">DataInputActivity</string>
    <string name="enter_requested_data">لطفا اطلاعات زیر را وارد نمایید</string>
    <string name="name">نام</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="age">سن</string>
    <string name="email">ایمیل</string>
    <string name="save">ذخیره</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="data_is_correct">آیا اطلاعات زیر مورد تایید است؟</string>
    <string name="input_data">ورود اطلاعات</string>
    <string name="show_list">نمایش لیست</string>
    <string name="welcome_to_my_project">Welcome To My Project</string>
    <string name="input_city_name">نام شهر مورد نظر را به انگلیسی وارد کنید</string>
    <string name="search">جستجو</string>
    <string name="not_provided">-</string>
    <string name="prayer_times">اوقات شرعی</string>
</resources>
