<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrayerTimesActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtCityName"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:hint="@string/input_city_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSearch"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_toEndOf="@id/edtCityName"
        android:layout_marginStart="10dp"
        android:layout_alignTop="@id/edtCityName"
        android:text="@string/search"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rclSearchHistory"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="65dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
    </androidx.recyclerview.widget.RecyclerView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/background_border">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtSobh"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/not_provided"
                android:gravity="center"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/subah_prayer"
                android:scaleType="centerInside"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtSunrise"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/not_provided"
                android:gravity="center"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ramadan_sunrise"
                android:scaleType="centerInside"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtZohr"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/not_provided"
                android:gravity="center"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ramadan_azhar"
                android:scaleType="centerInside"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtSunset"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/not_provided"
                android:gravity="center"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/maghrib_prayer"
                android:scaleType="centerInside"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtMaghreb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/not_provided"
                android:gravity="center"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/isha_prayer"
                android:scaleType="centerInside"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtMidnight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/not_provided"
                android:gravity="center"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/star_and_crescent_moon"
                android:scaleType="centerInside"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>